--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,160 +5,26 @@ title: Home Page
 <section class="mt-4 mb-5">
   <div class="container-fluid px-0 d-flex justify-content-center align-items-center bg-dark">
     <div class="row g-0">
-      <div class="col-12 display-cover">
-        <video autoplay="true" class="videoElement w-100 p-3" id="videoElement">
-        </video>
-        <canvas class="d-none"></canvas>
-
-        <div class="video-options">
-          <select name="" id="" class="custom-select">
-              <option value="">Select camera</option>
-          </select>
-        </div>
-
-        <img class="screenshot-image d-none" alt="">
-
-        <div class="controls">
-          <button class="btn btn-danger play" title="Play"><i data-feather="play-circle"></i></button>
-          <button class="btn btn-info pause d-none" title="Pause"><i data-feather="pause"></i></button>
-          <button class="btn btn-outline-success screenshot d-none" title="ScreenShot"><i data-feather="image"></i></button>
-      </div>
-
+      <div class="col-12">
+        <div style="width: 500px" id="reader"></div>
       </div>
     </div>
-    
   </div>
 </section>
 
 <script>
-// var video = document.querySelector("#videoElement");
+  $(function(){
+    function onScanSuccess(decodedText, decodedResult) {
+    // Handle on success condition with the decoded text or result.
+    console.log(`Scan result: ${decodedText}`, decodedResult);
+    alert(`Scan result: ${decodedText}`, decodedResult);
 
-// if (navigator.mediaDevices.getUserMedia) {
-//   navigator.mediaDevices.getUserMedia(
-//     { video: {
-//       width: {
-//         min: 250,
-//         ideal: 300,
-//         max: 500,
-//       },
-//       height: {
-//         min: 250,
-//         ideal: 300,
-//         max: 500
-//       },
-//       facingMode: {
-//         exact: 'environment'
-//       }
-//     },
-      
-//     })
-//     .then(function (stream) {
-//       video.srcObject = stream;
-//     })
-//     .catch(function (err0r) {
-//       console.log("Something went wrong!");
-//     });
-// }
-
-// feather.replace();
-
-const controls = document.querySelector('.controls');
-const cameraOptions = document.querySelector('.video-options>select');
-const video = document.querySelector('video');
-const canvas = document.querySelector('canvas');
-const screenshotImage = document.querySelector('img');
-const buttons = [...controls.querySelectorAll('button')];
-let streamStarted = false;
-
-const [play, pause, screenshot] = buttons;
-
-const constraints = {
-  video: {
-    width: {
-      min: 1280,
-      ideal: 1920,
-      max: 2560,
-    },
-    height: {
-      min: 720,
-      ideal: 1080,
-      max: 1440
-    },
-    facingMode: {
-      exact: 'environment'
     }
-  }
-};
 
-// cameraOptions.onchange = () => {
-//   const updatedConstraints = {
-//     ...constraints,
-//     deviceId: {
-//       exact: cameraOptions.value
-//     }
-//   };
-
-//   startStream(updatedConstraints);
-// };
-
-play.onclick = () => {
-  if (streamStarted) {
-    video.play();
-    play.classList.add('d-none');
-    pause.classList.remove('d-none');
-    return;
-  }
-  if ('mediaDevices' in navigator && navigator.mediaDevices.getUserMedia) {
-    // const updatedConstraints = {
-    //   ...constraints,
-    //   deviceId: {
-    //     exact: cameraOptions.value
-    //   }
-    // };
-    startStream(constraints);
-  }
-};
-
-const pauseStream = () => {
-  video.pause();
-  play.classList.remove('d-none');
-  pause.classList.add('d-none');
-};
-
-const doScreenshot = () => {
-  canvas.width = video.videoWidth;
-  canvas.height = video.videoHeight;
-  canvas.getContext('2d').drawImage(video, 0, 0);
-  screenshotImage.src = canvas.toDataURL('image/webp');
-  screenshotImage.classList.remove('d-none');
-};
-
-pause.onclick = pauseStream;
-screenshot.onclick = doScreenshot;
-
-const startStream = async (constraints) => {
-  const stream = await navigator.mediaDevices.getUserMedia(constraints);
-  handleStream(stream);
-};
-
-
-const handleStream = (stream) => {
-  video.srcObject = stream;
-  play.classList.add('d-none');
-  pause.classList.remove('d-none');
-  screenshot.classList.remove('d-none');
-
-};
-
-
-const getCameraSelection = async () => {
-  const devices = await navigator.mediaDevices.enumerateDevices();
-  const videoDevices = devices.filter(device => device.kind === 'videoinput');
-  const options = videoDevices.map(videoDevice => {
-    return `<option value="${videoDevice.deviceId}">${videoDevice.label}</option>`;
+    var html5QrcodeScanner = new Html5QrcodeScanner(
+      "reader", { fps: 10, qrbox: 250 });
+    html5QrcodeScanner.render(onScanSuccess);
   });
-  cameraOptions.innerHTML = options.join('');
-};
-
-getCameraSelection();
 </script>
+
+<script src="{{root}}assets/vendor/js/html5-qrcode.min.js"></script>
